--- a/package.json
+++ b/package.json
@@ -15,9 +15,12 @@
     "@mui/material": "^5.15.15",
     "@mui/styled-engine-sc": "^6.0.0-alpha.18",
     "@mui/system": "^5.15.15",
+    "@tanstack/react-query": "^5.29.2",
+    "axios": "^1.6.8",
     "next": "14.2.1",
     "react": "^18",
     "react-dom": "^18",
+    "react-query": "^3.39.3",
     "styled-components": "^6.1.8"
   },
   "devDependencies": {
