--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "react": "^18",
     "react-dom": "^18",
     "react-query": "^3.39.3",
+    "sharp": "^0.33.3",
     "styled-components": "^6.1.8"
   },
   "devDependencies": {
@@ -30,6 +31,7 @@
     "eslint": "^8",
     "eslint-config-next": "14.2.1",
     "postcss": "^8",
+    "prettier": "3.2.5",
     "tailwindcss": "^3.4.1",
     "typescript": "^5"
   }
