--- a/package.json
+++ b/package.json
@@ -17,6 +17,8 @@
     "@mui/system": "^5.15.15",
     "@tanstack/react-query": "^5.29.2",
     "axios": "^1.6.8",
+    "downloadjs": "^1.4.7",
+    "html2canvas": "^1.4.1",
     "next": "14.2.1",
     "react": "^18",
     "react-dom": "^18",
@@ -25,6 +27,7 @@
     "styled-components": "^6.1.8"
   },
   "devDependencies": {
+    "@types/downloadjs": "^1.4.6",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
