--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "next": "14.2.1",
     "react": "^18",
     "react-dom": "^18",
+    "react-markdown": "^9.0.1",
     "react-query": "^3.39.3",
     "sharp": "^0.33.3",
     "styled-components": "^6.1.8"
